--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/tv_category_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/tv_category_item.xml
@@ -20,6 +20,5 @@
             android:lines="3"
             android:padding="@dimen/padding_8"
             android:textSize="@dimen/font_size_11"
-            android:textColor="?channelItemCaption"
-            android:text="@string/caption"/>
+            android:textColor="?channelItemCaption"/>
 </android.support.percent.PercentRelativeLayout>
