--- a/SportsSideKick/app/src/sportsidekick/res/values/club.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/club.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="stats_url">http://hosted.stats.com/matchcast/football/clients/stats/index-new.html?lang=en&amp;league=liga</string>
+    <string name="stats_url" translatable="false">http://hosted.stats.com/matchcast/football/clients/stats/index-new.html?lang=en&amp;league=liga</string>
     <string name="store_url" translatable="false">https://lojaverde.sporting.pt/en</string>
 
-    <string name="terms_i_privacy">http://sportssidekick.tv/terms?lang=</string>
+    <string name="terms_and_privacy_url" translatable="false">http://sportssidekick.tv/terms?lang=</string>
     <string name="store_url_item" translatable="false">https://lojaverde.sporting.pt/en/equipments</string>
     <string name="store_url_item2" translatable="false">https://lojaverde.sporting.pt/en/lifestyle</string>
     <string name="store_url_item3" translatable="false">https://lojaverde.sporting.pt/en/children-baby</string>
@@ -16,6 +16,6 @@
     <string name="store_url_item9" translatable="false">https://lojaverde.sporting.pt/en/cheques-prenda</string>
 
     <string name="fantasy_url" translatable="false">https://s3-eu-west-1.amazonaws.com/sskirbucket/graphics/fantasy.png</string>
-    <string name="quiz_url">https://s3-eu-west-1.amazonaws.com/sskirbucket/graphics/quiz.png</string>
+    <string name="quiz_url" translatable="false">https://s3-eu-west-1.amazonaws.com/sskirbucket/graphics/quiz.png</string>
     <string name="clubtv_channelid" translatable="false">UCnJj6L93JX3Jrhzv81ayywA</string>
 </resources>
