--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
@@ -33,10 +33,10 @@
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:visibility="gone"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
-            android:tint="@color/light_colorPrimaryLight" />
+            android:tint="@color/light_colorPrimaryLight"
+            android:visibility="gone" />
     </RelativeLayout>
 
 
@@ -154,52 +154,29 @@
             android:src="@drawable/icon_search" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/friends_list"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/people_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_buttons_container"
         android:layout_below="@+id/search_container"
-        android:visibility="gone">
+        android:visibility="visible" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/people_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/no_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/no_result"
-            android:textColor="?white_semitransparent"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/special_list_holder"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/official_accounts_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/search_container">
+        android:layout_below="@+id/search_container" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/special_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/no_result_special"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/no_result"
-            android:textColor="?white_semitransparent"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
+    <TextView
+        android:id="@+id/no_results"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_results"
+        android:textColor="?white_semitransparent"
+        android:visibility="gone" />
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
