--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_rumour.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/height_230">
 
     <RelativeLayout
         android:id="@+id/row_wall_small_cell_container"
