--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/comment_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/comment_item.xml
@@ -6,12 +6,12 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_gravity="top"
         android:id="@+id/profile_image"
         android:layout_width="@dimen/width_60"
         android:layout_height="@dimen/height_60"
-        android:layout_marginStart="@dimen/margin_15"
+        android:layout_gravity="top"
         android:layout_marginEnd="@dimen/margin_5"
+        android:layout_marginStart="@dimen/margin_15"
         android:src="?profileImageIcon" />
 
     <RelativeLayout
@@ -22,21 +22,39 @@
             android:id="@+id/post_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="@dimen/margin_5"
             android:layout_marginEnd="@dimen/margin_15"
-            android:text="@string/comment_text"
+            android:layout_marginTop="@dimen/margin_5"
+            android:background="?chatBubbleIcon"
             android:minLines="1"
-            android:background="?chatBubbleIcon"/>
+            android:text="@string/comment_text"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/message_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/post_text"
+            android:text="DEMO TEXT DEMO TEXT DEMO TEXT DEMO TEXT"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_10"
+            android:textSize="@dimen/font_size_10"
+            android:layout_marginTop="@dimen/margin_5"
+            android:textColor="?lightGrey" />
+
+        <TextView
+            android:id="@+id/translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/post_text"
+            android:paddingEnd="@dimen/padding_16"
+            android:layout_marginBottom="@dimen/margin_5"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
-            android:layout_marginBottom="@dimen/margin_5"
-            android:textColor="?lightGrey" />
+            android:layout_toEndOf="@+id/message_information"
+            android:text="Translate"
+            android:textColor="?lightGrey"
+            android:textSize="@dimen/font_size_10"
+            />
+
     </RelativeLayout>
 </LinearLayout>
