--- a/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
@@ -10,9 +10,9 @@
         android:layout_width="@dimen/width_50"
         android:layout_height="@dimen/height_50"
         android:layout_gravity="top"
-        android:layout_marginTop="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_10"
         android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_5"
         android:src="?profileImageIcon" />
 
     <RelativeLayout
@@ -36,10 +36,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/post_text"
+            android:layout_marginBottom="@dimen/margin_5"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
-            android:layout_marginBottom="@dimen/margin_5"
-            android:textSize="@dimen/font_size_11"
-            android:textColor="?lightGrey" />
+            android:textColor="?lightGrey"
+            android:textSize="@dimen/font_size_11" />
     </RelativeLayout>
 </LinearLayout>
