--- a/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
@@ -40,6 +40,21 @@
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
             android:textColor="?lightGrey"
-            android:textSize="@dimen/font_size_11" />
+            android:textSize="@dimen/font_size_10" />
+
+        <TextView
+            android:id="@+id/translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/post_text"
+            android:paddingEnd="@dimen/padding_16"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_5"
+            android:layout_toEndOf="@+id/message_information"
+            android:text="Translate"
+            android:textColor="?lightGrey"
+            android:textSize="@dimen/font_size_10"
+            />
     </RelativeLayout>
 </LinearLayout>
