--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="chat_content_right_color"                  >#e6f7f4</color>
     <color name="colorGraySemiLight"                        >#d3d4d8</color>
     <color name="colorGrayLight"                            >#e9eaee</color>
+    <color name="colorGrayDark"                            >#454644</color>
     <color name="white_semitransparent"                   >#5fffffff</color>
     <color name="white"                                     >#ffffff</color>
 
