--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -52,7 +52,6 @@
         <item name="wallEditTextContainerBackground">@color/colorPrimaryVeryDark</item>
         <item name="wallEditSearchText">@color/white</item>
         <item name="wallEditSearchHint">@color/colorPrimarySemiLight</item>
-        <item name="wallUserContentTextColor">@color/white</item>
         <item name="webViewControlsBackground">@color/colorPrimary</item>
         <item name="playerBackground">@color/colorPrimarySemiLight</item>
         <item name="phoneWallMenuBackground">@color/colorGrayLight</item>
@@ -119,6 +118,14 @@
         <item name="phoneChatBackground">@drawable/phone_chat_background</item>
 
         <item name="videoChatButtonStyle">@style/button_call</item>
+
+        <!--Wall Item User Post-->
+        <item name="wallUserContentTextColor">@color/white</item>
+        <item name="wallUserContentColor">@color/colorGrayDark</item>
+
+        <item name="colorAccentSemiDarkRef">@color/colorAccentSemiDark</item>
+
+        <item name="colorPrimaryVeryLightRef">@color/colorPrimaryVeryLight</item>
     </style>
 
 
@@ -255,4 +262,8 @@
         <item name="fontPath">fonts/TitilliumWeb-Light.ttf</item>
         <item name="android:textSize">@dimen/font_size_28</item>
     </style>
+
+
+
+
 </resources>
