--- a/SportsSideKick/app/src/sportsidekick/res/layout/view_translation.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/view_translation.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_transparent_154">
+    android:background="@color/black_transparent_154"
+    android:clickable="true"
+    android:id="@+id/viewTranslationRoot">
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress"
