--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -68,7 +68,7 @@
         android:layout_marginStart="@dimen/margin_15"
         android:layout_toEndOf="@+id/profile_image"
         android:alpha="0.5"
-        android:textColor="@color/white"
+        android:textColor="?chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
 
     <TextView
@@ -79,7 +79,7 @@
         android:layout_toEndOf="@+id/sender"
         android:alpha="0.5"
         android:text="@string/message_time_splitter"
-        android:textColor="@color/white"
+        android:textColor="?chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
 
     <TextView
@@ -89,7 +89,7 @@
         android:layout_below="@+id/content_container"
         android:layout_toEndOf="@+id/spliter"
         android:alpha="0.5"
-        android:textColor="@color/white"
+        android:textColor="?chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
 
 
