--- a/SportsSideKick/app/src/main/res/values/attrs.xml
+++ b/SportsSideKick/app/src/main/res/values/attrs.xml
@@ -222,4 +222,5 @@
     <attr name="colorAccentSemiDarkRef" format="reference" />
     <attr name="colorPrimaryVeryLightRef" format="reference" />
 
+    <attr name="chatDetailsColorRef" format="reference"/>
 </resources>
