--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -249,7 +249,7 @@
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="@string/search"
-                android:textColor="@color/white" />
+                android:textColor="?chatDetailsColorRef" />
 
         </LinearLayout>
 
