--- a/SportsSideKick/app/src/main/res/layout-large/news_list_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/news_list_item.xml
@@ -26,7 +26,7 @@
             android:maxLines="2"
             android:padding="@dimen/margin_5"
             android:textAlignment="viewStart"
-            android:textColor="@color/colorPrimaryVeryLight"
+            android:textColor="?colorPrimaryVeryLightRef"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/news_date"
